# plants-backend

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  DEVTASKS.md  Dockerfile  README.md  TAXONOMY_DB_OVERVIEW.md  alembic.ini  config.toml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  generate_ts_definitions.py  prestart.sh  pyproject.toml  requirements.txt  run.py  wsgi.py
alembic/: env.py
alembic/versions/: 05fa62eaa93e_make_taxon_cols_not_nullable.py  1b84384bae57_non_nullable_col_2.py  2023_03_03_1249-a1c0f761afe0_plants_enum_cols.py  2023_03_03_1254_pollination_enum_cols-f7509236e341.py  2023_03_03_1307_taxon_enum_cols-1acc6ba22b44.py  2023_03_03_1313_poll_enum_cols-c8f3b832ba07.py  2023_03_03_1617_make_soilname_unique-2251ed252fb3.py  2023_03_03_1621_make_material_enum_and_not_nullable-953fad0c7547.py  2023_03_03_1624_change_date_col-b0647a7861e3.py  2023_03_03_1634_make_plants_cancellation_date_date_not_-fef47bc17b4e.py  2023_03_03_1643_rename_florescence_date_cols-dbfcf029737d.py  2023_03_03_1710_rename_taxon_occurrence_image_date_to_-502609ab2a9a.py  2023_03_03_1753_rename_some_datetime_cols-1057e4b949db.py  2023_03_03_1821_change_varchar_for_keyword-b2dbd040238b.py  2023_03_03_1942_remove_relative_path_from_plants-c7e0053ff184.py  2023_03_04_1846_image_record_date_time_tz_aware-f169d45c0b86.py  2023_03_08_1930_rename_pollination_pollination_-813c5a16b867.py  2023_03_08_2049_rename_taxonoccimage_s_created_on_to_-5ec48043f8b6.py  2023_03_11_1210_tz_awareness-cd9926bc2e4c.py  2023_03_11_2123_preview_image_id_not_filenema-a9180a2deedf.py  2023_03_11_2218_drop_filename_previewimage-1c9aef3b43a5.py  2023_04_09_1338_rename_pollination_count_to_count_-3fec819036fc.py  2023_04_09_1411_new_cols_pollination_count_pollinated_-f0cbf3dc1779.py  2023_04_10_1242_cascade_delete_event_images-f9d4504805d3.py  2023_04_10_1247_undo-43dd09460f0c.py  2023_04_10_1304_undo-bb20f26f5b7e.py  2023_04_10_1305_undo-c08ccdffdee7.py  2023_04_10_1307_undo-0fe895aa4d93.py  2023_04_10_1312_undo-8e61f3321c24.py  2023_04_11_0011_add_pot_event_id_without_constraints-2ca6fbb407ac.py  2023_04_11_0016_delete_col_event_pot_id_add_constraints-2e2f04c40820.py  2023_04_11_0017_delete_col_event_pot_id_add_constraints_-0a67da44d9c8.py  2023_04_11_1200_migrate_observation_to_event_id-4741510b8ed1.py  2023_04_11_1242_migrate_observation_to_event_id_pt_2-983262555171.py  2023_04_11_2037_context_to_enum_in_db-63ef5b81cf02.py  2023_04_11_2045_context_to_enum_in_db_pt2-ff220d6054e4.py  2023_05_04_0952_seed_planting-0a92aa948036.py  2023_05_05_2108_seed_planting_soil-03a8e23a10c9.py  2023_05_06_1059_seed_planting_to_plant-96fd7a34439c.py  2023_05_07_0812_seed_planting_covered-1998e7701efd.py  (+30 more)
diagrams/: backend_deployment_architecture.puml  er.puml
ml_helpers/numerical/: util_numerical.py
ml_helpers/preprocessing/: features.py
ml_helpers/quality/: data_types.py  evaluate_columns.py  transformation.py
plants/: __init__.py  config_local.py  constants.py  dependencies.py  exceptions.py  main.py
plants/deprecated/: photo_directory.py
plants/extensions/: auth.py  config_values.py  db.py  logger.py  logging.py  ml_models.py  orm.py
plants/mcp/: run.py  tools.py
plants/models/: entities.py  enums.py  event_models.py  history_model.py  image_models.py  plant_models.py  pollination_models.py  property_models.py  tag_models.py  taxon_models.py  trait_models.py  users.py
plants/routers/: api_biodiversity.py  auth.py  biodiversity_apis.py  events.py  florescences.py  functions.py  images.py  plants.py  pollinations.py  properties.py  property_names.py  proposals.py  selection_data.py  taxa.py  taxonomy.py
plants/routes/: biodiversity_apis.py  events.py  florescences.py  images.py  plants.py  pollinations.py  properties.py  property_names.py  proposals.py  selection_data.py  taxonomy.py
plants/schemas/: event.py  image.py  plant.py  pollination.py  property.py  proposal.py  selection.py  shared.py  taxon.py
plants/scripts/: biodiversity_api_tests.py  compare_results_of_exit_tags_import_into_db.py  create_csv_for_germination_model.py  create_csv_for_seed_ripening_model.py  delete_images.py  find_image_duplicates_in_db.py  import_exif_tags_into_database.py  migrate_photo_filenames.py  optimize_query_performance.py
plants/services/: Photo.py  PhotoDirectory.py  biodiversity_services.py  event_services.py  exif_services.py  florescence_services.py  flower_history.py  history_services.py  image_info.py  image_services.py  image_services_simple.py  ml_model.py  ml_prediction.py  os_paths.py  photo_file_access.py  photo_file_access_local_storage.py  photo_metadata_access.py  photo_metadata_access_exif.py  plants_services.py  pollination_services.py  property_services.py  query_taxa.py  scrape_taxon_id.py  selection_services.py  tag_services.py  taxon_occurence_image_services.py  taxon_services.py  taxonomy_lookup_details.py  taxonomy_lookup_gbif_id.py  taxonomy_name_formatter.py  taxonomy_occurence_images.py  taxonomy_search.py  (+1 more)
plants_tagger/: app.py  config.py  config_local.py  constants.py
scripts/: download_bulk_wcvp.py  experiment_florescence_model.py  experiment_species_list_via_api.py  explore_pygbif_capabilities.py  migrate_observation_run_in_alembic.py  migrate_postgres_enum.py  migrate_pot.py  migrate_preview_image.py  migrate_seed_plantings.py  rename_files_in_db.py  run_train_model_for_probability_of_seed_production.py  run_train_models.py  schemas_taxonomy_api.py
tests/: config_test.py  conftest.py  test_event_api.py  test_florescence_api.py  test_florescence_models.py  test_flower_history_services.py  test_image_api.py  test_occurrence_services.py  test_plant_api.py  test_plant_models.py  test_plant_services.py  test_plant_util.py  test_pollination_api.py  test_proposal_api.py  test_seed_planting_api.py  test_soil_api.py  test_taxon_api.py  test_taxon_services.py
ts_api_interfaces/: apiTypes_event.ts  apiTypes_image.ts  apiTypes_message.ts  apiTypes_plant.ts  apiTypes_pollination.ts  apiTypes_property.ts  apiTypes_selection.ts  apiTypes_taxon.ts
(+258 files in other folders)
